实验室提交

--- a/kratos/html/show.html
+++ b/kratos/html/show.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Document</title>
 </head>
 <body>
-    <img src="http://localhost:8080/kratos/images/person/img.png" alt="Pulpit rock" width="304" height="228">
+    <img alt="Pulpit rock" height="228" src="http://118.25.191.214:8005/logo/img.png" width="304">
 </body>
 </html>
