完善上传文件接口

--- a/kratos/html/upload.html
+++ b/kratos/html/upload.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <form action="upload" method="post" enctype="multipart/form-data">
-    上传照片:<input type="file" name="file" ><br>
+    上传照片:<input type="file" name="file1" ><br>
+    <input type="file" name="file2" >
     <!--    用户名:<input type="text" name="Username" placeholder="请输入你的用户名"><br>-->
     <!--    年&nbsp;&nbsp;&nbsp;龄:<input  name="Age" placeholder="请输入你的年龄"> <br>-->
     <!--    地&nbsp;&nbsp;&nbsp;址:<input  name="Address" placeholder="请输入你的地址"> <br>-->
